# thermoflux-rtd

./: .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: Case_study_iMM904.rst  Installation.rst  Quickstart.rst  api.rst  conf.py  extended_ai.md  extended_ai.rst  extended_info.rst  index.rst  requirements.txt  thermoflux_iMM904_ENS.ipynb
docs/source/: Installation.md  Installation.rst  Quickstart.rst  api.rst  conf.py  index.rst
tests/: annotation_test.ipynb  core_tests.ipynb  test_drg_tools.py  test_model.py  yeast_merged.xml  yeast_test.xml
tests/load_save_functions/: Ecoli_example_textbook_dump_load_test.ipynb  dump_1110.yml  ecoli_test_load.ipynb  test_dump.yml
tfsave/: model.py  pyproject.toml
tfsave/docs/: conf.py
thermo_flux/core/: metabolite.py  model.py  reaction.py
thermo_flux/hpc/: README.md  batch_jobSubmission_template.sh  gurobi_solve_cov.slurm  gurobi_tune.slurm  results_process.sh  run_seeds.sh  run_seeds.slurm  setupSimulations.sh  setupSingleReg.sh
thermo_flux/io/: eds_code.txt
thermo_flux/solver/: gurobi.py
thermo_flux/tools/: drg_tools.py
thermo_flux/utils/: annotation.py
